# cpa_ca_extraction

./: .gitignore  README.md  pyproject.toml  run_scraper.sh
data/: run.csv  run_20260408_0812.csv  run_20260408_0847.csv  run_20260408_1354.csv  run_20260408_1451.csv  run_20260408_1458.csv  run_20260408_1458.csv.seed_checkpoint.json  seeds.168.csv  seeds.example.csv
docs/: discovery-notes.md  implementation-plan.md
scripts/: setup.sh
src/scraper/: __init__.py  __main__.py  registry.py
src/scraper/core/: __init__.py  browser.py  checkpoint.py  csv_sink.py  dedupe.py  delays.py  interruptible.py  models.py  rate_limit.py  safety.py  seeds.py
src/scraper/sites/: __init__.py  cpa_australia.py
